--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 the next king of meme.
                             <div class="download-button-group">
 
-                                <a href="#" class="download-button download-button-apple">
+                                <a href="https://t.me/BinanceCat_Token" class="download-button download-button-apple">
                                     <div class="download-button-inner">
                                         <div class="download-button-icon c-pink">
                                             <i class="fab">🔥</i>
@@ -276,7 +276,7 @@
                                     <h1>Building a new king of meme tokens with the community at the center.</h1>
                                 </div>
                             </div>
-                            <a href="https://twitter.com/Shengweihu_Bro" class="button button-1">
+                            <a href="https://twitter.com/BinanceCat_" class="button button-1">
                                 <div class="button-inner">
                                     <div class="button-content">
                                         <h4><i class="fab fa-twitter"></i>Twitter</h4>
@@ -788,13 +788,13 @@
                                 <h6>Follow</h6>
                                 <ul>
                                     <li class="twitter">
-                                        <a href="https://twitter.com/Shengweihu_Bro" class="link-underline">
+                                        <a href="https://twitter.com/BinanceCat_" class="link-underline">
                                             <i class="fab fa-twitter"></i>
                                             <span>Twitter</span>
                                         </a>
                                     </li>
                                     <li class="telegram">
-                                        <a href="https://t.me/Binance Cat_CN" class="link-underline">
+                                        <a href="https://t.me/BinanceCat_Token" class="link-underline">
                                             <i class="fab fa-telegram"></i>
                                             <span>telegram</span>
                                         </a>
