--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="mobile-header">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/images/logo-white.png" alt="image">
+                                    <img src="assets/images/logo-white.png" style="height: 60px" alt="image">
                                 </a>
                             </div>
                             <ul>
